--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,11 +1,11 @@
-<!-- <form action="">
+<form action="">
     <div class="form-group">
         <input type="text" class="form-control" placeholder="search username"[(ngModel)]="username" name="username"
         (keyup)="findProfile()">
     </div>
 </form>
 
-<div class="container">
+<!-- <div class="container">
 <div *ngIf="profile">
 <div class="row">
    
