adding profile photo

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -5,14 +5,14 @@
     </div>
 </form>
 
-<!-- <div class="container">
+ <div class="container">
 <div *ngIf="profile">
 <div class="row">
    
             <div class="col-md-5">
                 <img src="{{profile.avatar_url}}" width="200px" height="200px" alt="Profile Image">
             </div>
-            <div class="col-md-3">
+        <!--     <div class="col-md-3">
              <div>
         {{profile.name}} <small>{{profile.login}}</small>
         <span *ngIf="profile.company">, Works at {{profile.company}}</span>
