--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -20,14 +20,14 @@
         location {{profile.location}}
             </div>
     
-           <!--      <ul >
+               <ul >
                     <li class="list-group- item" *ngIf="profile.bio">{{profile.bio}}</li>
                     <li class="list-group- item" *ngIf="profile.hireable">Available for hire</li>
                    <li class="list-group- item" *ngIf="profile.blog"><a href="{{profile.blog}}" target="_blank">{{profile.blog}}</a></li> 
                     <li class="list-group- item" *ngIf="profile.email"><a href="emailto:{{profile.email}}">{{profile.email}}</a></li>
                 </ul>
     </div>
-            <div class="col-md-4">
+           <!--  <div class="col-md-4">
                
                     <p>
                         <span class="label label-default">{{profile.followers}} Followers</span>
