adding github info

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -27,7 +27,7 @@
                     <li class="list-group- item" *ngIf="profile.email"><a href="emailto:{{profile.email}}">{{profile.email}}</a></li>
                 </ul>
     </div>
-           <!--  <div class="col-md-4">
+            <div class="col-md-4">
                
                     <p>
                         <span class="label label-default">{{profile.followers}} Followers</span>
@@ -38,7 +38,7 @@
                     </p>
                 </div>
                 </div>
-                    <p><a href="{{profile.html_url}}" target="_blank" >View profile on github</a></p>
+                <!--     <p><a href="{{profile.html_url}}" target="_blank" >View profile on github</a></p>
                     <div>
                         <div >
                             <h3>Repos</h3>
