adding github info

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -38,7 +38,7 @@
                     </p>
                 </div>
                 </div>
-                <!--     <p><a href="{{profile.html_url}}" target="_blank" >View profile on github</a></p>
+                  <p><a href="{{profile.html_url}}" target="_blank" >View profile on github</a></p>
                     <div>
                         <div >
                             <h3>Repos</h3>
@@ -56,4 +56,4 @@
         
   
 </div>
-</div> -->
+</div> 
