adding background image

--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -12,7 +12,7 @@
 #co{
     background-color: rgb(183, 137, 189)
 }
-/* .se{
+ .se{
     background-image: url("https://media.mnn.com/assets/images/2015/08/forest-waterfall-thailand.jpg.838x0_q80.jpg");
     background-size: cover;
     background-repeat: no-repeat;
@@ -21,7 +21,7 @@
  
 }
 
-input{
+/*input{
     width: 400px;
     margin-left: 250px;
     margin-top: 100px;
