--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -21,7 +21,7 @@
  
 }
 
-/*input{
+input{
     width: 400px;
     margin-left: 250px;
     margin-top: 100px;
@@ -35,4 +35,4 @@
 .container{
     padding-top: 345px;
     /* background-color: rgb(199, 241, 241); */
-}  */
+}  
